tree-sitter-twolc/test/corpus/basic.txt
==========
basic test
==========

Alphabet
 A B Ç
 a b c
 %{A%}:a %>:0  ;

Sets

Vowel = A
        a ;

Rules

"Remove suffix vowel with vowel-ending stem"
i:0 <=> Vowel %{VSUF%}:0 _ [ m | n ] ;

! Resources:
! https://wiki.apertium.org/wiki/Starting_a_new_language_with_HFST#Enter_twol
! https://kitwiki.csc.fi/twiki/bin/view/KitWiki/HfstHome
! https://github.com/hfst/
! https://wiki.apertium.org/wiki/Twol
! https://wiki.apertium.org/wiki/Hfst

---

(source_file
  (alphabet
    (alphabet_header)
    (symbol) (symbol) (symbol)
    (symbol) (symbol) (symbol)
    (symbol_pair left: (symbol) (colon) right: (symbol))
    (symbol_pair left: (symbol) (colon) right: (symbol))
    (semicolon))
  (sets
    (sets_header)
    (set
      name: (symbol) (eq) (symbol) (symbol) (semicolon)))
  (rules
    (rules_header)
    (rule
      name: (rule_name)
      target: (symbol_pair left: (symbol) (colon) right: (symbol))
      arrow: (arrow)
      contexts: (positive_contexts
        (context
          left: (pattern
            (pattern (symbol))
            (pattern (symbol_pair left: (symbol) (colon) right: (symbol))))
          locus: (locus)
          right: (pattern
            (lpar)
            (pattern (pattern (symbol)) (bool_op) (pattern (symbol)))
            (rpar))
          (semicolon)))))
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment))
